ui changes for mobile

--- a/src/app/equipment-detail/equipment-detail.html
+++ b/src/app/equipment-detail/equipment-detail.html
@@ -91,7 +91,7 @@
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-center ten_top_botam">
             <a class="btn now-reserve col-lg-12 all-btn" type="button" ui-sref="hm.reserveEquipment({id: equipment.Product_Id})">Reserve Now</a>
           </div>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center ten_top_botam">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center ten_top_botam inquiry-multiple">
             <button class="btn col-lg-12 col-md-12 col-sm-12 inq_btn primary-btn all-btn" type="button">Inquire for Multiple Equipments Rentals</button>
 
 
