--- a/src/app/forgot-password/forgot-password.html
+++ b/src/app/forgot-password/forgot-password.html
@@ -1,7 +1,39 @@
-<section class="content-top">
+<section class="content-top forgot-content-top">
   <!-- START  Main Content -->
   <article class="main-cantain">
     <div class="container">
+      <!-- start mobile forgot password tab-->
+      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 login_page forgot-password-col visible-xs">
+
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div ng-show="!flags.forgotPasswordNotifyInitiated">
+              <form role="form" name="forgotPasswordForm" novalidate valdr-type="User">
+                <h3 class="heading">Forgot Password?</h3>
+                <span id="helpBlock" class="help-block">Enter the email address associated with your Nobleiron account. We will get back to you with instructions to reset password.</span>
+                <div class="form-group">
+                  <input type="email" autocomplete="off" class="form-control" ng-model="forgotPasswordData.email" name="email"
+                         ng-required="true" placeholder="Enter email">
+                </div>
+                <a href="#/login" class="btn sell-equ pull-right forgot-pass-cancel all-btn">Cancel</a>
+                <button type="submit" ng-click="notifyForgotPassword()" class="btn sign_mybtn pull-right forgot-pass-btn all-btn primary-btn">
+                  <span ng-hide="loading">Submit</span>
+                  <i class="fa fa-spinner fa-spin loading-spinner" ng-show="loading"></i>
+                </button>
+              </form>
+            </div>
+            <div ng-show="flags.forgotPasswordNotifyInitiated">
+              We sent you an instruction to reset password. Please check your email.
+              <br>
+              <br>
+              <a href="#/login">Click here to continue on login page.</a>
+            </div>
+
+
+          </div>
+        </div>
+      </div>
+      <!-- end mobile forgot password tab -->
       <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
         <h4 class="signin_teg">Noble Iron offers equipment for rent, equipment for sale, and software applications for
           the construction and industrial equipment industry</h4>
@@ -37,8 +69,8 @@
           </div>
         </div>
       </div>
-      <!-- START  LOGIN/REGISTER TAB -->
-      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 login_page forgot-password-col">
+      <!-- START web  forgot password TAB -->
+      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 login_page forgot-password-col hidden-xs">
 
         <div class="panel panel-default">
           <div class="panel-body">
@@ -67,9 +99,8 @@
 
           </div>
         </div>
-
       </div>
-      <!-- End  LOGIN/REGISTER TAB -->
+      <!-- End web  forgot password TAB -->
     </div>
   </article>
   <!-- End  Main Content -->
