--- a/src/app/help/help.html
+++ b/src/app/help/help.html
@@ -36,7 +36,7 @@
                     </div>
                   </div>
                   <div class="col-md-12 col1"></div>
-                  <div class="col-md-12 col4 help-request-btn">
+                  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col4 help-request-btn">
                     <button class="btn pull-right all-btn primary-btn">Request Further Information</button>
                   </div>
                 </div>
