--- a/src/app/my-catalogue/my-catalogue.html
+++ b/src/app/my-catalogue/my-catalogue.html
@@ -83,7 +83,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="heart">
+                <!-- <div class="heart">
                   <ul>
                     <li>
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
@@ -95,7 +95,12 @@
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
                     </li>
                   </ul>
-                </div>
+                </div> -->
+                <div class="heart reserve-btns">
+          <a href=""><i class="fa fa-eye fa-2x pull-left"></i></a>
+          <a ng-href="/#/equipments/6349/reserve" type="button" class="btn my-reserve all-btn" href="/#/equipments/6349/reserve">Reserve</a>
+          <a ng-click="addToOrRemoveFromWishList(item)"><i class="fa fa-heart fa-2x pull-right ng-isolate-scope wish-added" btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i><i class="fa fa-spinner fa-spin ng-hide ng-scope" ng-show="loading" style="font-size: 18px;"></i></a>
+    </div>
               </div>
             </div>
 
@@ -132,7 +137,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="heart">
+                <!-- <div class="heart">
                   <ul>
                     <li>
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
@@ -144,7 +149,12 @@
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
                     </li>
                   </ul>
-                </div>
+                </div> -->
+                <div class="heart reserve-btns">
+          <a href=""><i class="fa fa-eye fa-2x pull-left"></i></a>
+          <a ng-href="/#/equipments/6349/reserve" type="button" class="btn my-reserve all-btn" href="/#/equipments/6349/reserve">Reserve</a>
+          <a ng-click="addToOrRemoveFromWishList(item)"><i class="fa fa-heart fa-2x pull-right ng-isolate-scope wish-added" btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i><i class="fa fa-spinner fa-spin ng-hide ng-scope" ng-show="loading" style="font-size: 18px;"></i></a>
+    </div>
               </div>
             </div>
 
@@ -181,7 +191,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="heart">
+                <!-- <div class="heart">
                   <ul>
                     <li>
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
@@ -193,7 +203,12 @@
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
                     </li>
                   </ul>
-                </div>
+                </div> -->
+                <div class="heart reserve-btns">
+          <a href=""><i class="fa fa-eye fa-2x pull-left"></i></a>
+          <a ng-href="/#/equipments/6349/reserve" type="button" class="btn my-reserve all-btn" href="/#/equipments/6349/reserve">Reserve</a>
+          <a ng-click="addToOrRemoveFromWishList(item)"><i class="fa fa-heart fa-2x pull-right ng-isolate-scope wish-added" btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i><i class="fa fa-spinner fa-spin ng-hide ng-scope" ng-show="loading" style="font-size: 18px;"></i></a>
+    </div>
               </div>
             </div>
 
@@ -230,7 +245,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="heart">
+                <!-- <div class="heart">
                   <ul>
                     <li>
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
@@ -242,7 +257,12 @@
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
                     </li>
                   </ul>
-                </div>
+                </div> -->
+                <div class="heart reserve-btns">
+          <a href=""><i class="fa fa-eye fa-2x pull-left"></i></a>
+          <a ng-href="/#/equipments/6349/reserve" type="button" class="btn my-reserve all-btn" href="/#/equipments/6349/reserve">Reserve</a>
+          <a ng-click="addToOrRemoveFromWishList(item)"><i class="fa fa-heart fa-2x pull-right ng-isolate-scope wish-added" btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i><i class="fa fa-spinner fa-spin ng-hide ng-scope" ng-show="loading" style="font-size: 18px;"></i></a>
+    </div>
               </div>
             </div>
 
@@ -279,7 +299,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="heart">
+                <!-- <div class="heart">
                   <ul>
                     <li>
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
@@ -291,7 +311,12 @@
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
                     </li>
                   </ul>
-                </div>
+                </div> -->
+                <div class="heart reserve-btns">
+          <a href=""><i class="fa fa-eye fa-2x pull-left"></i></a>
+          <a ng-href="/#/equipments/6349/reserve" type="button" class="btn my-reserve all-btn" href="/#/equipments/6349/reserve">Reserve</a>
+          <a ng-click="addToOrRemoveFromWishList(item)"><i class="fa fa-heart fa-2x pull-right ng-isolate-scope wish-added" btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i><i class="fa fa-spinner fa-spin ng-hide ng-scope" ng-show="loading" style="font-size: 18px;"></i></a>
+    </div>
               </div>
             </div>
 
@@ -328,7 +353,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="heart">
+                <!-- <div class="heart">
                   <ul>
                     <li>
                       <a href=""><i class="fa fa-eye fa-2x"></i></a>
@@ -340,7 +365,12 @@
                       <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
                     </li>
                   </ul>
-                </div>
+                </div> -->
+                <div class="heart reserve-btns">
+          <a href=""><i class="fa fa-eye fa-2x pull-left"></i></a>
+          <a ng-href="/#/equipments/6349/reserve" type="button" class="btn my-reserve all-btn" href="/#/equipments/6349/reserve">Reserve</a>
+          <a ng-click="addToOrRemoveFromWishList(item)"><i class="fa fa-heart fa-2x pull-right ng-isolate-scope wish-added" btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i><i class="fa fa-spinner fa-spin ng-hide ng-scope" ng-show="loading" style="font-size: 18px;"></i></a>
+    </div>
               </div>
             </div>
           </div>
