--- a/src/app/quotes-detail/quotes-detail.html
+++ b/src/app/quotes-detail/quotes-detail.html
@@ -164,32 +164,50 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 total-price quotes-total-price">
-								<div class="total-price-div">
-									<h3>
-										<label>Sub-Total Rental:</label>
-										<span>$ 13,847</span>
-									</h3>
-									<h3>
-										<label>Environmental Fee:</label>
-										<span>$ 13,847</span>
-									</h3>
-									<h3>
-										<label>Equipment Protection Program:</label>
-										<span>$ 13,847</span>
-									</h3>
-									<h3>
-										<label>Taxes:</label>
-										<span>$ 13,847</span>
-									</h3>
-									<h3>
-										<label class="total">Total:</label>
-										<span class="total">$ 13,847</span>
-									</h3>
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding quotes-site-price">
+								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-detail">
+									<h4 class="go-back-text">Details</h4>
+									<i class="fa fa-map-marker marker go-back-text"></i>
+									<span class="go-back-text">DSK Ranwara Constructions</span>
+									<br>
+									<p>Commercial Area</p>
+									<p>Houstan - TX</p>
+									<p class="zip">Zip Code: 34001</p>
+									<i class="fa fa-phone-square zip marker go-back-text"></i>
+									<span class="marker go-back-text">+1 657 657 5678</span>
+									<br>
+									<i class="fa fa-user marker go-back-text"></i>
+									<span class="marker go-back-text">
+										Name of Contact Person
+									</span>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 total-price quotes-total-price">
+									<div class="total-price-div">
+										<h3>
+											<label>Sub-Total Rental:</label>
+											<span>$ 13,847</span>
+										</h3>
+										<h3>
+											<label>Environmental Fee:</label>
+											<span>$ 13,847</span>
+										</h3>
+										<h3>
+											<label>Equipment Protection Program:</label>
+											<span>$ 13,847</span>
+										</h3>
+										<h3>
+											<label>Taxes:</label>
+											<span>$ 13,847</span>
+										</h3>
+										<h3>
+											<label class="total">Total:</label>
+											<span class="total">$ 13,847</span>
+										</h3>
+									</div>
 								</div>
 							</div>
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding"><hr class="bottommargin"></div>
-							<div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 reserve-generate-btn">
+							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 reserve-generate-btn">
 								<button class="btn sign_mybtn all-btn primary-btn"><i class="fa fa-download"></i>&nbsp Download</button>
 							</div>
 		    		</div>
