--- a/src/app/jobsite-rent/jobsite-rent.html
+++ b/src/app/jobsite-rent/jobsite-rent.html
@@ -115,8 +115,8 @@
 				</button>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 reserve-generate-btn">
-				<a href="#" class="btn sign_mybtn all-btn primary-btn cont ">Continue</a>
-				<button class="btn sign_mybtn all-btn primary-btn reser-now cont">Reserve Now</button>
+				<a href="#" class="btn sign_mybtn all-btn primary-btn cont ">Generate Quote</a>
+				<button class="btn sign_mybtn all-btn primary-btn reser-now cont">Reserve</button>
 			</div>
 		</div>
 
