--- a/src/app/equipment-reserve/equipment-reserve.html
+++ b/src/app/equipment-reserve/equipment-reserve.html
@@ -1,6 +1,6 @@
 <div class="modal-content prof-btn">
   <div class="modal-header">
-    <h4 class="modal-title">Reserve this Equipment<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times marker on-hover-pointer"></i></a></h4>
+    <h4 class="modal-title">Add to Cart<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times marker on-hover-pointer"></i></a></h4>
   </div>
   <div class="modal-body order-history-modal" style="min-height: 300px">
     <load-indicator loading="!product"></load-indicator>
@@ -13,10 +13,8 @@
           </figure>
 
           <div class="col-md-12">
-            <p class="terms">
-              <strong>Terms:</strong> Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac.
-              Curabitur dapibus iaculis. Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat
-              massa placerat ac. Curabitur dapibus iaculis.
+            <p class="terms" ng-bind-html="product.Product_Description">
+
             </p>
           </div>
           <!-- <div class="col-lg-6">
@@ -73,7 +71,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 total_price_popup">Total: <span class="total_price_cle">$349</span></div>
+          <!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 total_price_popup">Total: <span class="total_price_cle">$349</span></div>-->
 
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 quantity-btn all-btn">
             <input type="text" ng-value="quantity" ng-model="quantity"/>
@@ -81,7 +79,7 @@
           </div>
           <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
             <a class="btn pull-right all-btn sign_mybtn primary-btn" ng-click="equipmentReserve()" type="submit">
-              <span btn-load-indicator="Equipment:Reserve:Process">Reserve Now</span>
+              <span btn-load-indicator="Equipment:Reserve:Process">Add to Cart</span>
             </a>
           </div>
         </div>
