--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -117,7 +117,7 @@
               </a>
             </li>
             <li>
-              <a href="#/shopping-cart" class="marker">
+              <a ui-sref="hm.cart.details" class="marker">
                 <i class="fa fa-shopping-cart fa-2x marker"></i></a>
               <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
             </li>
