--- a/src/app/my-catalogue/my-catalogue.html
+++ b/src/app/my-catalogue/my-catalogue.html
@@ -1,334 +1,74 @@
-<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 display_side nopadding catalog-div">
-  <div class="clearfix">
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-bottm-line manage_job_tit manage_job_tit_small">
-      My Catalog
-    </div>
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right my-bottm-line dash_board_tit manage_job_tit_small">
-      <a class="dash_board_light invoice-no" href="#/">Home </a>/ <span class="dash_board_bold">Catalog</span>
-    </div>
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
-    <div class="col-md-4 lift_box nopadding" ng-repeat="product in catelog">
-      <figure class="catalogue-fig">
-        <a><img alt="" ng-src="{{product.Product_Image[0].ProductImage_Path}}"/></a>
-        <!-- <div class="certified_box"> -->
-        <div class="star_rate">
-          <a href="#"> <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star-half-o"></i>
-            <i class="fa fa-star-o"></i>
-          </a>
-        </div>
-        <!-- </div> -->
-      </figure>
-      <div class="catalogue-desc">
-        <h4 class="lift_box_tit"><a href="">{{product.Product_Name}}</a></h4>
-        <h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a href="#">{{product.MAKE}}</a></span></h5>
-        <div class="daily_ul">
-          <ul>
-            <li>
-              <p class="daily_title">Daily</p>
-              <p class="daily_price">${{product.Product_Price.Daily}}</p>
-            </li>
-            <li>
-              <p class="daily_title">Weekly</p>
-              <p class="daily_price">${{product.Product_Price.Weekly}}</p>
-            </li>
-            <li>
-              <p class="daily_title">Monthly</p>
-              <p class="daily_price">${{product.Product_Price.Monthly}}</p>
-            </li>
-          </ul>
-        </div>
-        <!-- <div class="heart">
-          <ul>
-            <li>
-              <a href=""><i class="fa fa-eye fa-2x"></i></a>
-            </li>
-            <li>
-              <a ng-href="" type="button" class="btn my-reserve all-btn">Reserve</a>
-            </li>
-            <li>
-              <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
-            </li>
-          </ul>
-        </div> -->
-        <div class="heart reserve-btns">
-          <a href=""><i class="fa fa-eye fa-2x pull-left"></i></a>
-          <a ng-href="/#/equipments/6349/reserve" type="button" class="btn my-reserve all-btn" href="/#/equipments/6349/reserve">Reserve</a>
-          <a ng-click="addToOrRemoveFromWishList(item)"><i class="fa fa-heart fa-2x pull-right ng-isolate-scope wish-added" btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i><i class="fa fa-spinner fa-spin ng-hide ng-scope" ng-show="loading" style="font-size: 18px;"></i></a>
+
+
+  <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 display_side nopadding catalog-div">
+    <div class="clearfix">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-bottm-line manage_job_tit manage_job_tit_small">
+        My Catalog
+      </div>
+      <div ng-show="catelogFetchInProgress" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+        <load-indicator loading="catelogFetchInProgress"></load-indicator>
+      </div>
+      <div ng-style="{'visibility': catelogFetchInProgress ? 'hidden':'visible'}">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right my-bottm-line dash_board_tit manage_job_tit_small">
+        <a class="dash_board_light invoice-no" href="#/">Home </a>/ <span class="dash_board_bold">Catalog</span>
+      </div>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
+      <div class="col-md-4 lift_box nopadding" ng-repeat="product in catelog">
+        <figure class="catalogue-fig">
+          <a ui-sref="hm.equipmentDetails({id: product.Product_Id})"><img alt="" ng-src="{{product.Product_Image[0].ProductImage_Path}}"/></a>
+          <!-- <div class="certified_box"> -->
+          <div class="star_rate">
+            <a href="#"> <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star-half-o"></i>
+              <i class="fa fa-star-o"></i>
+            </a>
+          </div>
+          <!-- </div> -->
+        </figure>
+        <div class="catalogue-desc">
+          <h4 class="lift_box_tit"><a ui-sref="hm.equipmentDetails({id: product.Product_Id})">{{product.Product_Name}}</a></h4>
+          <h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a ui-sref="hm.equipmentDetails({id: product.Product_Id})">{{product.MAKE}}</a></span></h5>
+          <div class="daily_ul">
+            <ul>
+              <li>
+                <p class="daily_title">Daily</p>
+                <p class="daily_price">${{product.Product_Price.Daily}}</p>
+              </li>
+              <li>
+                <p class="daily_title">Weekly</p>
+                <p class="daily_price">${{product.Product_Price.Weekly}}</p>
+              </li>
+              <li>
+                <p class="daily_title">Monthly</p>
+                <p class="daily_price">${{product.Product_Price.Monthly}}</p>
+              </li>
+            </ul>
+          </div>
+          <!-- <div class="heart">
+            <ul>
+              <li>
+                <a href=""><i class="fa fa-eye fa-2x"></i></a>
+              </li>
+              <li>
+                <a ng-href="" type="button" class="btn my-reserve all-btn">Reserve</a>
+              </li>
+              <li>
+                <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
+              </li>
+            </ul>
+          </div> -->
+          <div class="heart reserve-btns">
+            <a href=""><i class="fa fa-eye fa-2x pull-left"></i></a>
+            <a ui-sref="hm.reserveEquipment({id: product.Product_Id})" type="button" class="btn my-reserve all-btn">Add to Cart</a>
+            <a ng-click="addToOrRemoveFromWishList(product)"><i class="fa fa-heart fa-2x pull-right" btn-load-indicator="Add:Wishlist:Process"  btn-uid="product.Product_Id" ng-class="{'wish-added': product.Is_in_catelog}"></i></a>
+          </div>
         </div>
       </div>
     </div>
-
-    <!--<div class="col-md-4 lift_box nopadding">-->
-    <!--<figure class="catalogue-fig">-->
-    <!--<a><img alt=""/></a>-->
-    <!--&lt;!&ndash; <div class="certified_box"> &ndash;&gt;-->
-    <!--<div class="star_rate">-->
-    <!--<a href="#"> <i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star-half-o"></i>-->
-    <!--<i class="fa fa-star-o"></i>-->
-    <!--</a>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; </div> &ndash;&gt;-->
-    <!--</figure>-->
-    <!--<div class="catalogue-desc">-->
-    <!--<h4 class="lift_box_tit"><a href="">Electric Equipment Wide-16</a></h4>-->
-    <!--<h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a href="#">Vendor Name</a></span></h5>-->
-    <!--<div class="daily_ul">-->
-    <!--<ul>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Daily</p>-->
-    <!--<p class="daily_price">$199</p>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Weekly</p>-->
-    <!--<p class="daily_price">$1156</p>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Monthly</p>-->
-    <!--<p class="daily_price">$4556</p>-->
-    <!--</li>-->
-    <!--</ul>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; <div class="heart">-->
-    <!--<ul>-->
-    <!--<li>-->
-    <!--<a href=""><i class="fa fa-eye fa-2x"></i></a>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn my-reserve all-btn">Reserve</a>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>-->
-    <!--</li>-->
-    <!--</ul>-->
-    <!--</div> &ndash;&gt;-->
-    <!--<div class="heart reserve-btns">-->
-    <!--<a href=""><i class="fa fa-eye fa-2x pull-left"></i></a>-->
-    <!--<a ng-href="/#/equipments/6349/reserve" type="button" class="btn my-reserve all-btn" href="/#/equipments/6349/reserve">Reserve</a>-->
-    <!--<a ng-click="addToOrRemoveFromWishList(item)"><i class="fa fa-heart fa-2x pull-right ng-isolate-scope wish-added" btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i><i class="fa fa-spinner fa-spin ng-hide ng-scope" ng-show="loading" style="font-size: 18px;"></i></a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="col-md-4 lift_box nopadding">-->
-    <!--<figure class="catalogue-fig">-->
-    <!--<a><img alt=""/></a>-->
-    <!--&lt;!&ndash; <div class="certified_box"> &ndash;&gt;-->
-    <!--<div class="star_rate">-->
-    <!--<a href="#"> <i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star-half-o"></i>-->
-    <!--<i class="fa fa-star-o"></i>-->
-    <!--</a>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; </div> &ndash;&gt;-->
-    <!--</figure>-->
-    <!--<div class="catalogue-desc">-->
-    <!--<h4 class="lift_box_tit"><a href="">Electric Equipment Wide-16</a></h4>-->
-    <!--<h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a href="#">Vendor Name</a></span></h5>-->
-    <!--<div class="daily_ul">-->
-    <!--<ul>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Daily</p>-->
-    <!--<p class="daily_price">$199</p>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Weekly</p>-->
-    <!--<p class="daily_price">$1156</p>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Monthly</p>-->
-    <!--<p class="daily_price">$4556</p>-->
-    <!--</li>-->
-    <!--</ul>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; <div class="heart">-->
-    <!--<ul>-->
-    <!--<li>-->
-    <!--<a href=""><i class="fa fa-eye fa-2x"></i></a>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn my-reserve all-btn">Reserve</a>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>-->
-    <!--</li>-->
-    <!--</ul>-->
-    <!--</div> &ndash;&gt;-->
-    <!--<div class="heart reserve-btns">-->
-    <!--<a href=""><i class="fa fa-eye fa-2x pull-left"></i></a>-->
-    <!--<a ng-href="/#/equipments/6349/reserve" type="button" class="btn my-reserve all-btn" href="/#/equipments/6349/reserve">Reserve</a>-->
-    <!--<a ng-click="addToOrRemoveFromWishList(item)"><i class="fa fa-heart fa-2x pull-right ng-isolate-scope wish-added" btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i><i class="fa fa-spinner fa-spin ng-hide ng-scope" ng-show="loading" style="font-size: 18px;"></i></a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="col-md-4 lift_box nopadding">-->
-    <!--<figure class="catalogue-fig">-->
-    <!--<a><img alt=""/></a>-->
-    <!--&lt;!&ndash; <div class="certified_box"> &ndash;&gt;-->
-    <!--<div class="star_rate">-->
-    <!--<a href="#"> <i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star-half-o"></i>-->
-    <!--<i class="fa fa-star-o"></i>-->
-    <!--</a>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; </div> &ndash;&gt;-->
-    <!--</figure>-->
-    <!--<div class="catalogue-desc">-->
-    <!--<h4 class="lift_box_tit"><a href="">Electric Equipment Wide-16</a></h4>-->
-    <!--<h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a href="#">Vendor Name</a></span></h5>-->
-    <!--<div class="daily_ul">-->
-    <!--<ul>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Daily</p>-->
-    <!--<p class="daily_price">$199</p>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Weekly</p>-->
-    <!--<p class="daily_price">$1156</p>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Monthly</p>-->
-    <!--<p class="daily_price">$4556</p>-->
-    <!--</li>-->
-    <!--</ul>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; <div class="heart">-->
-    <!--<ul>-->
-    <!--<li>-->
-    <!--<a href=""><i class="fa fa-eye fa-2x"></i></a>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn my-reserve all-btn">Reserve</a>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>-->
-    <!--</li>-->
-    <!--</ul>-->
-    <!--</div> &ndash;&gt;-->
-    <!--<div class="heart reserve-btns">-->
-    <!--<a href=""><i class="fa fa-eye fa-2x pull-left"></i></a>-->
-    <!--<a ng-href="/#/equipments/6349/reserve" type="button" class="btn my-reserve all-btn" href="/#/equipments/6349/reserve">Reserve</a>-->
-    <!--<a ng-click="addToOrRemoveFromWishList(item)"><i class="fa fa-heart fa-2x pull-right ng-isolate-scope wish-added" btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i><i class="fa fa-spinner fa-spin ng-hide ng-scope" ng-show="loading" style="font-size: 18px;"></i></a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="col-md-4 lift_box nopadding">-->
-    <!--<figure class="catalogue-fig">-->
-    <!--<a><img alt=""/></a>-->
-    <!--&lt;!&ndash; <div class="certified_box"> &ndash;&gt;-->
-    <!--<div class="star_rate">-->
-    <!--<a href="#"> <i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star-half-o"></i>-->
-    <!--<i class="fa fa-star-o"></i>-->
-    <!--</a>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; </div> &ndash;&gt;-->
-    <!--</figure>-->
-    <!--<div class="catalogue-desc">-->
-    <!--<h4 class="lift_box_tit"><a href="">Electric Equipment Wide-16</a></h4>-->
-    <!--<h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a href="#">Vendor Name</a></span></h5>-->
-    <!--<div class="daily_ul">-->
-    <!--<ul>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Daily</p>-->
-    <!--<p class="daily_price">$199</p>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Weekly</p>-->
-    <!--<p class="daily_price">$1156</p>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Monthly</p>-->
-    <!--<p class="daily_price">$4556</p>-->
-    <!--</li>-->
-    <!--</ul>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; <div class="heart">-->
-    <!--<ul>-->
-    <!--<li>-->
-    <!--<a href=""><i class="fa fa-eye fa-2x"></i></a>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn my-reserve all-btn">Reserve</a>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>-->
-    <!--</li>-->
-    <!--</ul>-->
-    <!--</div> &ndash;&gt;-->
-    <!--<div class="heart reserve-btns">-->
-    <!--<a href=""><i class="fa fa-eye fa-2x pull-left"></i></a>-->
-    <!--<a ng-href="/#/equipments/6349/reserve" type="button" class="btn my-reserve all-btn" href="/#/equipments/6349/reserve">Reserve</a>-->
-    <!--<a ng-click="addToOrRemoveFromWishList(item)"><i class="fa fa-heart fa-2x pull-right ng-isolate-scope wish-added" btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i><i class="fa fa-spinner fa-spin ng-hide ng-scope" ng-show="loading" style="font-size: 18px;"></i></a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="col-md-4 lift_box nopadding">-->
-    <!--<figure class="catalogue-fig">-->
-    <!--<a><img alt=""/></a>-->
-    <!--&lt;!&ndash; <div class="certified_box"> &ndash;&gt;-->
-    <!--<div class="star_rate">-->
-    <!--<a href="#"> <i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star"></i>-->
-    <!--<i class="fa fa-star-half-o"></i>-->
-    <!--<i class="fa fa-star-o"></i>-->
-    <!--</a>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; </div> &ndash;&gt;-->
-    <!--</figure>-->
-    <!--<div class="catalogue-desc">-->
-    <!--<h4 class="lift_box_tit"><a href="">Electric Equipment Wide-16</a></h4>-->
-    <!--<h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a href="#">Vendor Name</a></span></h5>-->
-    <!--<div class="daily_ul">-->
-    <!--<ul>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Daily</p>-->
-    <!--<p class="daily_price">$199</p>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Weekly</p>-->
-    <!--<p class="daily_price">$1156</p>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<p class="daily_title">Monthly</p>-->
-    <!--<p class="daily_price">$4556</p>-->
-    <!--</li>-->
-    <!--</ul>-->
-    <!--</div>-->
-    <!--&lt;!&ndash; <div class="heart">-->
-    <!--<ul>-->
-    <!--<li>-->
-    <!--<a href=""><i class="fa fa-eye fa-2x"></i></a>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn my-reserve all-btn">Reserve</a>-->
-    <!--</li>-->
-    <!--<li>-->
-    <!--<a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>-->
-    <!--</li>-->
-    <!--</ul>-->
-    <!--</div> &ndash;&gt;-->
-    <!--<div class="heart reserve-btns">-->
-    <!--<a href=""><i class="fa fa-eye fa-2x pull-left"></i></a>-->
-    <!--<a ng-href="/#/equipments/6349/reserve" type="button" class="btn my-reserve all-btn" href="/#/equipments/6349/reserve">Reserve</a>-->
-    <!--<a ng-click="addToOrRemoveFromWishList(item)"><i class="fa fa-heart fa-2x pull-right ng-isolate-scope wish-added" btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id" ng-class="{'wish-added': item.Is_in_catelog}"></i><i class="fa fa-spinner fa-spin ng-hide ng-scope" ng-show="loading" style="font-size: 18px;"></i></a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
   </div>
+
 </div>
+
+
