--- a/src/app/search/grid.html
+++ b/src/app/search/grid.html
@@ -15,8 +15,8 @@
       </div>
  -->    </div>
 
-    <h4 class="lift_box_tit"><a ng-href="/#/equipments{{item.id}}">{{item.Product_Name}}</a></h4>
-    <h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a href="#">{{item.MAKE}}</a></span>
+    <h4 class="lift_box_tit"><a ui-sref="hm.equipmentDetails({id: item.Product_Id})">{{item.Product_Name}}</a></h4>
+    <h5 class="lift_box_subtit">by <span class="lift_box_vendor"><a ui-sref="hm.equipmentDetails({id: item.Product_Id})">{{item.MAKE}}</a></span>
       <a href="#" class="pull-right rating-stars"> <i class="fa fa-star"></i>
           <i class="fa fa-star"></i>
           <i class="fa fa-star"></i>
