--- a/src/app/styles/custom.css
+++ b/src/app/styles/custom.css
@@ -341,3 +341,22 @@ html, body {
 .fadable.ng-hide-add.ng-hide-add-active {
   opacity: 0;
 }
+
+/* you can also define the transition style
+   on the base class as well (.repeat-item) */
+.repeat-item.ng-enter,
+.repeat-item.ng-leave {
+  -webkit-transition:0.7s linear all;
+  transition:0.7s linear all;
+}
+
+.repeat-item.ng-enter,
+.repeat-item.ng-leave.ng-leave-active {
+  opacity:0;
+  height: 0px;
+}
+.repeat-item.ng-leave,
+.repeat-item.ng-enter.ng-enter-active {
+  opacity:1;
+  height: 30px;
+}
