--- a/src/app/my-catalogue/my-catalogue.html
+++ b/src/app/my-catalogue/my-catalogue.html
@@ -13,6 +13,15 @@
         <a class="dash_board_light invoice-no" href="#/">Home </a>/ <span class="dash_board_bold">Catalog</span>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
+        <div ng-show="!catelog.length" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pull-center">
+          <h3 class="heading-text cart-empty pull-center">
+            Sorry! No Items in Catalog.
+          </h3>
+          <button class="btn sell-equ all-btn cont-renting" ng-click="$state.go('hm.search.results')"><i class="fa fa-chevron-left"></i> &nbsp
+            Go back and add few
+          </button>
+          <!-- <a ui-sref="hm.search.results"> Go Back</a> -->
+        </div>
       <div class="col-md-4 lift_box nopadding repeat-item" ng-repeat="product in catelog">
         <figure class="catalogue-fig">
           <a ui-sref="hm.equipmentDetails({id: product.Product_Id})"><img alt="" ng-src="{{product.Product_Image[0].ProductImage_Path}}"/></a>
