--- a/src/app/add-job-site/add-job-site.html
+++ b/src/app/add-job-site/add-job-site.html
@@ -4,15 +4,14 @@
 	</div>
 </div>
 <div class="row fields-row">
-  <!--<input type="text" id="Autocomplete" ngModel="result1" class="form-control" />-->
 	<div class="col-md-12 site-col">
-		<input type="text" placeholder="Job Site Name" class="form-control">
+		<input type="text" placeholder="Job Site Name" class="form-control" ng-model="address.jobsite">
 	</div>
 	<div class="col-md-12 other-col">
-    <input type="text" placeholder="City" class="form-control" ng-model="address.route">
+    <input type="text" placeholder="Address" class="form-control" ng-model="address.route">
 	</div>
 	<div class="col-md-6 other-col">
-		<input type="text" placeholder="Address" class="form-control" ng-model="address.locality">
+		<input type="text" placeholder="City" class="form-control" ng-model="address.locality">
 	</div>
 	<div class="col-md-6 other-col">
 		<input type="text" placeholder="State" class="form-control" ng-model="address.administrative_area_level_1">
@@ -21,46 +20,35 @@
 		<input type="text" placeholder="Zip Code" class="form-control" ng-model="address.postal_code">
 	</div>
 	<div class="col-md-6 other-col">
-		<input type="text" placeholder="Phone" class="form-control">
+		<input type="text" placeholder="Phone" class="form-control" ng-model="address.phone">
 	</div>
+  <div class="col-md-12 other-col" id="searchbox">
+  </div>
 </div>
 <div class="row">
 	<div class="col-md-12">
+    <script type="text/ng-template" id="searchbox.tpl.html">
+      <input type="text" class="form-control" placeholder="Search Location"/>
+    </script>
 
-    <ui-gmap-google-map
-      center="map.center"
-      zoom="map.zoom"
-      dragging="map.dragging"
-      bounds="map.bounds"
-      events="map.events"
-      options="map.options"
-      pan="true"
-      control="map.control"
-      >
-      <!--to add as a map control -->
-      <ui-gmap-search-box options="searchbox.options" template="searchbox .html"
-                          events="searchbox.events" position="searchbox.position"></ui-gmap-search-box>
+    <div ng-if="showMap" class="jobsite-lookup">
+      <ui-gmap-google-map
+        center="map.center"
+        zoom="map.zoom"
+        options="map.options"
+        pan="true"
+        >
+        <ui-gmap-search-box options="searchbox.options" template="'searchbox.tpl.html'" parentdiv="'searchbox'"
+        events="searchbox.events" position="'TOP_CENTER'"></ui-gmap-search-box>
+      </ui-gmap-google-map>
+    </div>
 
-      <!--to add to a parent div-->
-      <!--<ui-gmap-search-box options="searchbox.options" template="searchbox.template" events="searchbox.events" parentdiv="searchbox.parentdiv"></ui-gmap-search-box>-->
-
-
-      <ui-gmap-markers idkey="map.idkey" models="map.markers" coords="'self'" icon="'icon'"
-                       click="'onClicked'"></ui-gmap-markers>
-      <ui-gmap-window coords="selected" idkey="selected.place_id" templateurl="selected.templateurl"
-                      templateparameter="selected.templateparameter" options="selected.options"
-                      closeClick='selected.closeClick()' ng-cloak>
-
-      </ui-gmap-window>
-
-
-    </ui-gmap-google-map>
 
 	</div>
 </div>
 <div class="row nomargin">
 	<div class="col-md-12 site-col">
-		<button class="btn sign_mybtn all-btn primary-btn">Add Job Site</button>
+		<button class="btn sign_mybtn all-btn primary-btn" ng-click="addJobSite()">Add Job Site</button>
 		<button class="btn sell-equ all-btn">Cancel</button>
 	</div>
 </div>
