--- a/src/app/styles/custom.css
+++ b/src/app/styles/custom.css
@@ -360,3 +360,12 @@ html, body {
   opacity:1;
   height: 30px;
 }
+
+
+
+.jobsite-lookup .angular-google-map{
+  height:200px
+}
+.jobsite-lookup .angular-google-map-container{
+  height:200px;
+}
