--- a/src/app/styles/custom.css
+++ b/src/app/styles/custom.css
@@ -364,7 +364,7 @@ html, body {
 
 
 .jobsite-lookup .angular-google-map{
-  height:200px
+  height:200px;
 }
 .jobsite-lookup .angular-google-map-container{
   height:200px;
